@@ -1,0 +1,15 @@
+#!/bin/sh
+
+set -e
+
+APPNAME=@APPNAME@
+
+# Temporary hook to fix nightly testers from a previous bug.
+case "$1" in
+install|upgrade)
+	if dpkg --compare-versions "$2" le "4.0~b7~hg20100915r53868+nobinonly-0ubuntu1"; then
+		update-alternatives --remove gnome-www-browser /usr/bin/
+	fi
+esac
+
+#DEBHELPER#
