@@ -1,0 +1,21 @@
+#!/bin/sh
+
+set -e
+
+APP_NAME=@APPNAME@
+
+# Temporary hook to fix nightly testers from a previous bug.
+case "$1" in
+install|upgrade)
+    if dpkg --compare-versions "$2" le "4.0~b7~hg20100915r53868+nobinonly-0ubuntu1"; then
+        rm_conffile "${APP_NAME}" "/etc/@APPNAME/pref/firefox.js"
+        rm_conffile "${APP_NAME}" "/etc/@APPNAME/profile/bookmarks.html"
+        rm_conffile "${APP_NAME}" "/etc/@APPNAME/profile/localstore.rdf"
+        rm_conffile "${APP_NAME}" "/etc/@APPNAME/profile/mimeTypes.rdf"
+        rm_conffile "${APP_NAME}" "/etc/@APPNAME/profile/prefs.js"
+        rm_conffile "${APP_NAME}" "/etc/@APPNAME/profile/chrome/userChrome-example.css"
+        rm_conffile "${APP_NAME}" "/etc/@APPNAME/profile/chrome/userContent-example.css"
+    fi
+esac
+
+#DEBHELPER#
